更新 .gitignore 文件以排除 Draw.io 临时和备份文件；在 AGENTS.md 和 README.md 中添加泳道图、甘特图、RACI 矩阵、产品路线图和平面布局图的描述；新增多个示例文件，包括电商平台架构、AWS 三层 Web 应用架构、部门商店布局、博客系统实体关系图、员工入职流程、软件开发项目甘特图等；删除不再使用的示例文件。

--- a/.gitignore
+++ b/.gitignore
@@ -63,8 +63,14 @@ yarn.lock
 # Project Specific
 projects/*
 !projects/.gitkeep
+
+# Draw.io Temporary and Backup Files
 *.drawio.bkp
 *.drawio~
+*.drawio.dtmp
+.~*.drawio
+.$*.drawio.bkp
+.*.drawio.bkp
 
 # Test Files
 .pytest_cache/
