新增多个 Draw.io 文件，包括 Claude 工作流程、政府投资项目流程、微服务架构、波特五力模型和价值链模型；更新 .gitignore 文件以排除特定的 Draw.io 文件类型。

--- a/.gitignore
+++ b/.gitignore
@@ -63,6 +63,7 @@ yarn.lock
 # Project Specific
 projects/*
 !projects/.gitkeep
+!projects/*.drawio
 
 # Draw.io Temporary and Backup Files
 *.drawio.bkp
